[auto] updated html listings

--- a/examples/html/Texture.html
+++ b/examples/html/Texture.html
@@ -44,7 +44,7 @@ reference, this is what it looks like with the <code>LineColour</code> turned
 back on.
 <img title='' src="../images/texture-egg.png"/>
 
-We'll have a red texture which is darker closer to the center of the egg and a
+Let's have a red texture which is darker closer to the center of the egg and a
 green texture that grows darker towards the bottom. Adding<a name="NumInstances-back"/><a class=footnote href="#NumInstances">1</a>
  them together produces a pretty yellow egg.
 
