--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=curves/examples/Texture.html">
+        <meta http-equiv="refresh" content="1;url=examples/html/Texture.html">
         <script type="text/javascript">
-            window.location.href = "curves/examples/Texture.html"
+            window.location.href = "examples/html/Texture.html"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href="curves/examples/Texture.html">link</a>.
+        If you are not redirected automatically, follow this <a href="examples/html/Texture.html">link</a>.
     </body>
 </html>
