--- a/examples/html/Texture.html
+++ b/examples/html/Texture.html
@@ -164,20 +164,35 @@ texture basis of an object if it isn't what you want.
 <img title='' src="../images/texture-6.png"/>
 
 <h2>Using pixel coordinates</h2>
-The pixel coordinate can be used to create raster effects:
 
-<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>ex4</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>egg</span> <span class='hs-varop'>`with`</span> <span class='hs-keyglyph'>[</span> <span class='hs-conid'>Texture</span> <span class='hs-conop'>:=</span> <span class='hs-keyglyph'>\</span><span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-varid'>x</span> <span class='hs-varid'>y</span><span class='hs-layout'>)</span> <span class='hs-keyword'>_</span> <span class='hs-keyglyph'>-&gt;</span>
-<a name="line-2"></a><span class='hs-varop'>&gt;</span>                     <span class='hs-keyword'>if</span> <span class='hs-varid'>even</span> <span class='hs-layout'>(</span><span class='hs-varid'>floor</span> <span class='hs-layout'>(</span><span class='hs-varid'>x</span> <span class='hs-varop'>/</span> <span class='hs-num'>10</span><span class='hs-layout'>)</span> <span class='hs-varop'>+</span> <span class='hs-varid'>floor</span> <span class='hs-layout'>(</span><span class='hs-varid'>y</span> <span class='hs-varop'>/</span> <span class='hs-num'>10</span><span class='hs-layout'>)</span><span class='hs-layout'>)</span>
-<a name="line-3"></a><span class='hs-varop'>&gt;</span>                     <span class='hs-keyword'>then</span> <span class='hs-conid'>Colour</span> <span class='hs-num'>1</span>   <span class='hs-num'>0</span> <span class='hs-num'>0</span> <span class='hs-num'>1</span>
-<a name="line-4"></a><span class='hs-varop'>&gt;</span>                     <span class='hs-keyword'>else</span> <span class='hs-conid'>Colour</span> <span class='hs-num'>0.5</span> <span class='hs-num'>0</span> <span class='hs-num'>0</span> <span class='hs-num'>1</span> <span class='hs-keyglyph'>]</span>
+Unlike the texture coordinates, pixel coordinates are completely unaffected by
+image transformations. The value of the pixel coordinate is always the position
+of the pixel being coloured in the final PNG image. One use case for pixel
+coordinates is to create raster effects like these:
+
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>chessEgg</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>egg</span> <span class='hs-varop'>`with`</span> <span class='hs-keyglyph'>[</span> <span class='hs-conid'>Texture</span> <span class='hs-conop'>:=</span> <span class='hs-keyglyph'>\</span><span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-varid'>x</span> <span class='hs-varid'>y</span><span class='hs-layout'>)</span> <span class='hs-keyword'>_</span> <span class='hs-keyglyph'>-&gt;</span>
+<a name="line-2"></a><span class='hs-varop'>&gt;</span>                           <span class='hs-keyword'>if</span> <span class='hs-varid'>even</span> <span class='hs-layout'>(</span><span class='hs-varid'>floor</span> <span class='hs-layout'>(</span><span class='hs-varid'>x</span> <span class='hs-varop'>/</span> <span class='hs-num'>10</span><span class='hs-layout'>)</span> <span class='hs-varop'>+</span> <span class='hs-varid'>floor</span> <span class='hs-layout'>(</span><span class='hs-varid'>y</span> <span class='hs-varop'>/</span> <span class='hs-num'>10</span><span class='hs-layout'>)</span><span class='hs-layout'>)</span>
+<a name="line-3"></a><span class='hs-varop'>&gt;</span>                           <span class='hs-keyword'>then</span> <span class='hs-conid'>Colour</span> <span class='hs-num'>1</span>   <span class='hs-num'>0</span> <span class='hs-num'>0</span> <span class='hs-num'>1</span>
+<a name="line-4"></a><span class='hs-varop'>&gt;</span>                           <span class='hs-keyword'>else</span> <span class='hs-conid'>Colour</span> <span class='hs-num'>0.5</span> <span class='hs-num'>0</span> <span class='hs-num'>0</span> <span class='hs-num'>1</span> <span class='hs-keyglyph'>]</span>
 </pre>
 <img title='' src="../images/texture-7.png"/>
 
-Transforming the image has no effect on the pixel coordinates:
+Transforming the chess egg does nothing to the texture as advertised.
 
-<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>ex5</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>ex4</span> <span class='hs-varop'>&lt;&gt;</span> <span class='hs-varid'>translate</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>1</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-layout'>(</span><span class='hs-varid'>rotate</span> <span class='hs-layout'>(</span><span class='hs-comment'>-</span><span class='hs-varid'>pi</span><span class='hs-varop'>/</span><span class='hs-num'>4</span><span class='hs-layout'>)</span> <span class='hs-varid'>ex4</span><span class='hs-layout'>)</span>
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>chessEggs</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>chessEgg</span> <span class='hs-varop'>&lt;&gt;</span> <span class='hs-varid'>translate</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>1</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-layout'>(</span><span class='hs-varid'>rotate</span> <span class='hs-layout'>(</span><span class='hs-comment'>-</span><span class='hs-varid'>pi</span><span class='hs-varop'>/</span><span class='hs-num'>4</span><span class='hs-layout'>)</span> <span class='hs-varid'>chessEgg</span><span class='hs-layout'>)</span>
 </pre>
 <img title='' src="../images/texture-8.png"/>
+
+Of course, that we cannot affect the pixel coordinates with transformations
+doesn't mean that we can't play around with the texture function itself.
+
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>swirlyEgg</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>chessEgg</span> <span class='hs-varop'>`with`</span>
+<a name="line-2"></a><span class='hs-varop'>&gt;</span>   <span class='hs-keyglyph'>[</span> <span class='hs-conid'>Texture</span> <span class='hs-conop'>:~</span> <span class='hs-keyglyph'>\</span><span class='hs-varid'>tex</span> <span class='hs-varid'>p</span> <span class='hs-varid'>q</span> <span class='hs-keyglyph'>-&gt;</span> <span class='hs-varid'>tex</span> <span class='hs-layout'>(</span><span class='hs-varid'>rotateAround</span> <span class='hs-num'>60</span> <span class='hs-layout'>(</span><span class='hs-num'>2</span> <span class='hs-varop'>*</span> <span class='hs-varid'>distance</span> <span class='hs-varid'>q</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-varid'>p</span><span class='hs-layout'>)</span> <span class='hs-varid'>q</span> <span class='hs-keyglyph'>]</span>
+</pre>
+<img title='' src="../images/texture-9.png"/>
+
+Here we used the texture coordinate to change which pixel we sample from the
+old texture.
 
 <h2>FillColour and Texture interaction</h2>
 The <code>FillColour</code> and <code>Texture</code> attributes map to the same
@@ -187,7 +202,7 @@ that you can change the texture of an image by modifying the fill colour.
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>purpleEgg</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>yellowEgg</span> <span class='hs-varop'>`with`</span>
 <a name="line-2"></a><span class='hs-varop'>&gt;</span>         <span class='hs-keyglyph'>[</span> <span class='hs-conid'>FillColour</span> <span class='hs-conop'>:~</span> <span class='hs-keyglyph'>\</span><span class='hs-layout'>(</span><span class='hs-conid'>Colour</span> <span class='hs-varid'>r</span> <span class='hs-varid'>g</span> <span class='hs-varid'>b</span> <span class='hs-varid'>a</span><span class='hs-layout'>)</span> <span class='hs-keyglyph'>-&gt;</span> <span class='hs-conid'>Colour</span> <span class='hs-varid'>g</span> <span class='hs-varid'>b</span> <span class='hs-varid'>r</span> <span class='hs-varid'>a</span> <span class='hs-keyglyph'>]</span>
 </pre>
-<img title='' src="../images/texture-9.png"/>
+<img title='' src="../images/texture-10.png"/>
 
 <hr>
 
