[auto] updated gh-pages

--- a/examples/html/Basics.html
+++ b/examples/html/Basics.html
@@ -1,14 +1,13 @@
 
-<head>
-  <title>Basics</title>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans|Droid+Sans+Mono&subset=latin,greek-ext' rel='stylesheet' type='text/css'>
-  <link href='../css/examples.css' rel='stylesheet' type='text/css'>
-</head>
+<head><title>Basics</title><link href='http://fonts.googleapis.com/css?family=Open+Sans|Droid+Sans+Mono&subset=latin,greek-ext' rel='stylesheet' type='text/css'/><link href='../css/examples.css' rel='stylesheet' type='text/css'/></head>
 <body>
+<span class=header>curves-1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
 
 
 <!--
 
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>module</span> <span class='hs-conid'>Basics</span> <span class='hs-keyword'>where</span>
+</pre>
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>ExampleGen</span>
 </pre>
 -->
@@ -16,6 +15,12 @@
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>Graphics</span><span class='hs-varop'>.</span><span class='hs-conid'>Curves</span>
 <a name="line-2"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>Graphics</span><span class='hs-varop'>.</span><span class='hs-conid'>Curves</span><span class='hs-varop'>.</span><span class='hs-conid'>Geometry</span>
 </pre>
+<!--
+
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>thumbnail</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>ex6</span>
+</pre>
+-->
+
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>ex1</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>circle</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>50</span> <span class='hs-num'>50</span><span class='hs-layout'>)</span> <span class='hs-num'>40</span>
 </pre>
 <img title='' src="../images/basics-0.png"/>
@@ -49,4 +54,6 @@
 </pre>
 <img title='' src="../images/basics-6.png"/>
 
+<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Fri Jan 31 22:50:37 CET 2014</span></span>
 </body></html>
+
