[auto] updated gh-pages

--- a/examples/html/Textures.html
+++ b/examples/html/Textures.html
@@ -6,7 +6,7 @@
 
 <!--
 
-<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>module</span> <span class='hs-conid'>Texture</span> <span class='hs-keyword'>where</span>
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>module</span> <span class='hs-conid'>Textures</span> <span class='hs-keyword'>where</span>
 </pre>
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>ExampleGen</span>
 <a name="line-2"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>Graphics</span><span class='hs-varop'>.</span><span class='hs-conid'>Curves</span><span class='hs-varop'>.</span><span class='hs-conid'>Geometry</span>
@@ -47,7 +47,7 @@ First, let's have ourselves an invisible egg
 The rest of this page is dedicated to giving the egg pretty colours, but for
 reference, this is what it looks like with the <code>LineColour</code> turned
 back on.
-<img title='' src="../images/texture-0.png"/>
+<img title='' src="../images/textures-0.png"/>
 
 Let's have a red texture which is darker closer to the center of the egg and a
 green texture that grows darker towards the bottom. Adding<a name="NumInstances-back"/><a class=footnote href="#NumInstances">1</a> them together produces a pretty yellow egg.
@@ -62,7 +62,7 @@ green texture that grows darker towards the bottom. Adding<a name="NumInstances-
 <a name="line-8"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>eggs</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>redEgg</span> <span class='hs-varop'>&lt;&gt;</span> <span class='hs-varid'>translate</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>2</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-varid'>greenEgg</span>
 <a name="line-9"></a><span class='hs-varop'>&gt;</span>               <span class='hs-varop'>&lt;&gt;</span> <span class='hs-varid'>translate</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>4</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-varid'>yellowEgg</span>
 </pre>
-<img title='' src="../images/texture-1.png"/>
+<img title='' src="../images/textures-1.png"/>
 
 <p>
 Texture coordinates are transformed together with the image, so the texture
@@ -70,7 +70,7 @@ sticks with an object when it's transformed as you would expect.
 
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>tilt</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>rotate</span> <span class='hs-layout'>(</span><span class='hs-varid'>pi</span><span class='hs-varop'>/</span><span class='hs-num'>4</span><span class='hs-layout'>)</span> <span class='hs-varid'>yellowEgg</span>
 </pre>
-<img title='Humpty, no!' src="../images/texture-2.png"/>
+<img title='Humpty, no!' src="../images/textures-2.png"/>
 
 <h3>The texture basis</h3>
 
@@ -122,7 +122,7 @@ texture coordinate of a point <code>p</code> is <code>Vec</code> <code>s</code> 
 </pre>
 -->
 In picture form:
-<img title='' src="../images/texture-3.png"/>
+<img title='' src="../images/textures-3.png"/>
 
 The <code><a href='../../dist/doc/html/curves/Graphics-Curves-Math.html#v:toBasis'>toBasis</a></code> and <code><a href='../../dist/doc/html/curves/Graphics-Curves-Math.html#v:fromBasis'>fromBasis</a></code> functions lets you
 convert between points in the <code><a href='../../dist/doc/html/curves/Graphics-Curves-Math.html#v:defaultBasis'>defaultBasis</a></code> and an arbitrary
@@ -137,7 +137,7 @@ off-center as follows:
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>upsideDown</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>yellowEgg</span> <span class='hs-varop'>`with`</span>
 <a name="line-2"></a><span class='hs-varop'>&gt;</span>   <span class='hs-keyglyph'>[</span> <span class='hs-conid'>TextureBasis</span> <span class='hs-conop'>:~</span> <span class='hs-varid'>translate</span> <span class='hs-num'>0.2</span> <span class='hs-varop'>.</span> <span class='hs-varid'>rotate</span> <span class='hs-varid'>pi</span> <span class='hs-keyglyph'>]</span>
 </pre>
-<img title='' src="../images/texture-4.png"/>
+<img title='' src="../images/textures-4.png"/>
 
 When an image is transformed, the texture basis is also transformed<a name="basis-transform-back"/><a class=footnote href="#basis-transform">2</a>. This is true even if we haven't set a texture for the
 object, which can lead to slightly surprising behaviour in cases. Compare the
@@ -150,7 +150,7 @@ two balls below
 <a name="line-5"></a><span class='hs-varop'>&gt;</span>     <span class='hs-varid'>ball1</span> <span class='hs-varid'>r</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>curve</span> <span class='hs-num'>0</span> <span class='hs-layout'>(</span><span class='hs-num'>2</span> <span class='hs-varop'>*</span> <span class='hs-varid'>pi</span><span class='hs-layout'>)</span> <span class='hs-varop'>$</span> <span class='hs-keyglyph'>\</span><span class='hs-varid'>t</span> <span class='hs-keyglyph'>-&gt;</span> <span class='hs-conid'>Vec</span> <span class='hs-layout'>(</span><span class='hs-varid'>r</span> <span class='hs-varop'>*</span> <span class='hs-varid'>cos</span> <span class='hs-varid'>t</span><span class='hs-layout'>)</span> <span class='hs-layout'>(</span><span class='hs-varid'>r</span> <span class='hs-varop'>*</span> <span class='hs-varid'>sin</span> <span class='hs-varid'>t</span><span class='hs-layout'>)</span>
 <a name="line-6"></a><span class='hs-varop'>&gt;</span>     <span class='hs-varid'>ball2</span> <span class='hs-varid'>r</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>scale</span> <span class='hs-varid'>r</span> <span class='hs-layout'>(</span><span class='hs-varid'>ball1</span> <span class='hs-num'>1</span><span class='hs-layout'>)</span>
 </pre>
-<img title='' src="../images/texture-5.png"/>
+<img title='' src="../images/textures-5.png"/>
 
 The left ball is drawn as a circle with radius two using <code><a href='../../dist/doc/html/curves/Graphics-Curves.html#v:curve'>curve</a></code>,
 and the the right ball is a circle with radius one scaled by a factor of two.
@@ -162,7 +162,7 @@ reset the texture basis of an object if it isn't what you want.
 <a name="line-2"></a><span class='hs-varop'>&gt;</span>   <span class='hs-keyword'>where</span>
 <a name="line-3"></a><span class='hs-varop'>&gt;</span>     <span class='hs-varid'>newBasis</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>translate</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>2.15</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-varop'>$</span> <span class='hs-varid'>scale</span> <span class='hs-num'>3</span> <span class='hs-varid'>defaultBasis</span>
 </pre>
-<img title='' src="../images/texture-6.png"/>
+<img title='' src="../images/textures-6.png"/>
 
 <h2>Using pixel coordinates</h2>
 
@@ -176,13 +176,13 @@ coordinates is to create raster effects like these:
 <a name="line-3"></a><span class='hs-varop'>&gt;</span>                           <span class='hs-keyword'>then</span> <span class='hs-conid'>Colour</span> <span class='hs-num'>1</span>   <span class='hs-num'>0</span> <span class='hs-num'>0</span> <span class='hs-num'>1</span>
 <a name="line-4"></a><span class='hs-varop'>&gt;</span>                           <span class='hs-keyword'>else</span> <span class='hs-conid'>Colour</span> <span class='hs-num'>0.5</span> <span class='hs-num'>0</span> <span class='hs-num'>0</span> <span class='hs-num'>1</span> <span class='hs-keyglyph'>]</span>
 </pre>
-<img title='' src="../images/texture-7.png"/>
+<img title='' src="../images/textures-7.png"/>
 
 As advertised, transforming the chess egg does nothing to the texture.
 
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>chessEggs</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>chessEgg</span> <span class='hs-varop'>&lt;&gt;</span> <span class='hs-varid'>translate</span> <span class='hs-layout'>(</span><span class='hs-conid'>Vec</span> <span class='hs-num'>1</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-layout'>(</span><span class='hs-varid'>rotate</span> <span class='hs-layout'>(</span><span class='hs-comment'>-</span><span class='hs-varid'>pi</span><span class='hs-varop'>/</span><span class='hs-num'>4</span><span class='hs-layout'>)</span> <span class='hs-varid'>chessEgg</span><span class='hs-layout'>)</span>
 </pre>
-<img title='' src="../images/texture-8.png"/>
+<img title='' src="../images/textures-8.png"/>
 
 Of course, that we cannot affect the pixel coordinates with transformations
 doesn't mean that we can't play around with the texture function itself.
@@ -190,7 +190,7 @@ doesn't mean that we can't play around with the texture function itself.
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>swirlyEgg</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>chessEgg</span> <span class='hs-varop'>`with`</span>
 <a name="line-2"></a><span class='hs-varop'>&gt;</span>   <span class='hs-keyglyph'>[</span> <span class='hs-conid'>Texture</span> <span class='hs-conop'>:~</span> <span class='hs-keyglyph'>\</span><span class='hs-varid'>tex</span> <span class='hs-varid'>p</span> <span class='hs-varid'>q</span> <span class='hs-keyglyph'>-&gt;</span> <span class='hs-varid'>tex</span> <span class='hs-layout'>(</span><span class='hs-varid'>rotateAround</span> <span class='hs-num'>60</span> <span class='hs-layout'>(</span><span class='hs-num'>2</span> <span class='hs-varop'>*</span> <span class='hs-varid'>distance</span> <span class='hs-varid'>q</span> <span class='hs-num'>0</span><span class='hs-layout'>)</span> <span class='hs-varid'>p</span><span class='hs-layout'>)</span> <span class='hs-varid'>q</span> <span class='hs-keyglyph'>]</span>
 </pre>
-<img title='' src="../images/texture-9.png"/>
+<img title='' src="../images/textures-9.png"/>
 
 Here we used the texture coordinate to change which pixel we sample from the
 old, pixel-based, texture.
@@ -203,7 +203,7 @@ that you can change the texture of an image by modifying the fill colour.
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>purpleEgg</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>yellowEgg</span> <span class='hs-varop'>`with`</span>
 <a name="line-2"></a><span class='hs-varop'>&gt;</span>         <span class='hs-keyglyph'>[</span> <span class='hs-conid'>FillColour</span> <span class='hs-conop'>:~</span> <span class='hs-keyglyph'>\</span><span class='hs-layout'>(</span><span class='hs-conid'>Colour</span> <span class='hs-varid'>r</span> <span class='hs-varid'>g</span> <span class='hs-varid'>b</span> <span class='hs-varid'>a</span><span class='hs-layout'>)</span> <span class='hs-keyglyph'>-&gt;</span> <span class='hs-conid'>Colour</span> <span class='hs-varid'>g</span> <span class='hs-varid'>b</span> <span class='hs-varid'>r</span> <span class='hs-varid'>a</span> <span class='hs-keyglyph'>]</span>
 </pre>
-<img title='' src="../images/texture-10.png"/>
+<img title='' src="../images/textures-10.png"/>
 
 <hr>
 
@@ -242,6 +242,6 @@ texture function inputs. It would just take a while.
  to be precise.
 </div>
 
-<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Fri Jan 31 22:50:39 CET 2014</span></span>
+<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Feb  1 22:14:43 CET 2014</span></span>
 </body></html>
 
