[auto] updated gh-pages

--- a/examples/html/Fractals.html
+++ b/examples/html/Fractals.html
@@ -3,6 +3,7 @@
 <body>
 <span class=header>curves-1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
 
+
 <!--
 
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>module</span> <span class='hs-conid'>Fractals</span> <span class='hs-keyword'>where</span>
@@ -20,4 +21,7 @@
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-definition'>thumbnail</span> <span class='hs-keyglyph'>=</span> <span class='hs-varid'>todo</span>
 </pre>
 -->
+
+<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Feb  1 22:40:32 CET 2014</span></span>
+</body></html>
 
