--- a/examples/html/Text.html
+++ b/examples/html/Text.html
@@ -1,18 +1,18 @@
 
-<head><title>Advanced Curves</title><link href='http://fonts.googleapis.com/css?family=Open+Sans|Droid+Sans+Mono&subset=latin,greek-ext' rel='stylesheet' type='text/css'/><link href='../css/examples.css' rel='stylesheet' type='text/css'/></head>
+<head><title>Text</title><link href='http://fonts.googleapis.com/css?family=Open+Sans|Droid+Sans+Mono&subset=latin,greek-ext' rel='stylesheet' type='text/css'/><link href='../css/examples.css' rel='stylesheet' type='text/css'/></head>
 <body>
 <span class=header>curves-1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
 
 
 <!--
 
-<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>module</span> <span class='hs-conid'>Advanced</span> <span class='hs-keyword'>where</span>
+<pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>module</span> <span class='hs-conid'>Text</span> <span class='hs-keyword'>where</span>
 </pre>
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>ExampleGen</span>
 </pre>
 -->
 
-<h1>Advanced Curves</h1>
+<h1>Text</h1>
 
 <pre><a name="line-1"></a><span class='hs-varop'>&gt;</span> <span class='hs-keyword'>import</span> <span class='hs-conid'>Graphics</span><span class='hs-varop'>.</span><span class='hs-conid'>Curves</span>
 </pre>
@@ -22,6 +22,6 @@
 </pre>
 -->
 
-<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Feb  1 22:40:31 CET 2014</span></span>
+<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Feb  1 22:40:32 CET 2014</span></span>
 </body></html>
 
